# peary

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  config.cfg  copy-to-zynq.sh  mkdocs.yml
.gitlab-ci.d/: init_x86_64.sh
.peary-ci/: init_x86_64.sh
cmake/: PearyConfig.cmake.in  PearyMacros.cmake  clang-cpp-checks.cmake  config.cmake.h  peary.cmake  tools.cmake
config/: config.cfg  matrix.cfg  patterngen.conf
devices/: CMakeLists.txt  clicpix2.h
devices/ATLASPix/: ATLASPix.cpp  ATLASPix.hpp  ATLASPixDevice.cpp  ATLASPixDevice.hpp  ATLASPixMatrix.cpp  ATLASPixMatrix.hpp  ATLASPixServer.cpp  ATLASPix_Config.cpp  ATLASPix_Config.hpp  ATLASPix_clk_100-FMC_REF.h  ATLASPix_clk_100.h  ATLASPix_clk_100.slabtimeproj  ATLASPix_clk_freerunning.h  ATLASPix_defaults.hpp  CMakeLists.txt  atlaspix_decoder.cpp
devices/ATLASPix/clockgenerator/: clk_6-100_8-100_ref-0FMC.h  clk_6-100_8-100_ref-0FMC.slabtimeproj  clk_6-125_8-125_ref-0FMC.h  clk_6-125_8-125_ref-0FMC.slabtimeproj
devices/BareExample/: BareExampleDevice.cpp  BareExampleDevice.hpp  CMakeLists.txt  README.md
devices/C3PD/: C3PD.cpp  C3PD.hpp  C3PDDevice.cpp  C3PDDevice.hpp  CMakeLists.txt  c3pd_defaults.hpp
devices/CCPDv5/: CCPDv5Device.cpp  CCPDv5Device.hpp  CMakeLists.txt
devices/CLICTD/: CLICTDDefaults.hpp  CLICTDDevice.cpp  CLICTDDevice.hpp  CLICTDFrameDecoder.cpp  CLICTDFrameDecoder.hpp  CLICTDPixels.hpp  CMakeLists.txt  clictd_frameDecoder.cpp  clictd_frameDecoder.hpp
devices/CLICTD/clockgenerator/: Si5345-RevB-CLICTD-Project.slabtimeproj  Si5345-RevB-CLICTD-Registers.h
devices/CLICpix2/: CLICpix2.cpp  CLICpix2.hpp  CLICpix2Device.cpp  CLICpix2Device.hpp  CMakeLists.txt  clicpix2RawDecoder.cpp  clicpix2_defaults.hpp  clicpix2_frameDecoder.hpp  clicpix2_pixels.hpp  clicpix2_utilities.cpp
devices/CLICpix2/clockgenerator/: Si5345-RevB-CLICpix2-Project.slabtimeproj  Si5345-RevB-CLICpix2-Project_freeRunningMode.slabtimeproj  Si5345-RevB-CLICpix2-Registers.h  Si5345-RevB-CLICpix2-Registers_freeRunningMode.h
devices/CLICpix2/framedecoder/: clicpix2_frameDecoder.cpp  clicpix2_frameDecoder.hpp
devices/DSO9254A/: CMakeLists.txt  DSO9254A.cpp  DSO9254A.hpp  DSO9254ADevice.cpp  DSO9254ADevice.hpp
devices/Example/: CMakeLists.txt  Example.cpp  Example.hpp  ExampleDevice.cpp  ExampleDevice.hpp  README.md
devices/ExampleCaribou/: CMakeLists.txt  ExampleCaribouDevice.cpp  ExampleCaribouDevice.hpp  README.md
devices/MCP9804/: CMakeLists.txt  MCP9804Device.cpp  MCP9804Device.hpp
devices/c3pd/: CMakeLists.txt  c3pd.cc  c3pd.cpp  c3pd.hpp  c3pd_defaults.hpp
devices/ccpdv5/: ccpdv5.cpp  ccpdv5.hpp
devices/clicpix2/: CMakeLists.txt  Si5345-RevB-CLICpix2-Project.slabtimeproj  Si5345-RevB-CLICpix2-Project_freeRunningMode.slabtimeproj  Si5345-RevB-CLICpix2-Registers.h  Si5345-RevB-CLICpix2-Registers_freeRunningMode.h  clicpix2.cc  clicpix2.cpp  clicpix2.h  clicpix2.hpp  clicpix2RawDecoder.cpp  clicpix2_defaults.hpp  clicpix2_frameDecoder.cpp  clicpix2_frameDecoder.hpp  clicpix2_frameDecoder_lfsr13.cpp  clicpix2_frameDecoder_lfsr5.cpp  clicpix2_frameDecoder_lfsr8.cpp  clicpix2_pixels.hpp  clicpix2_threshold.hpp  clicpix2_utilities.cpp  clicpix2_utilities.hpp
devices/dso9254a/: CMakeLists.txt  dso9254a.cpp  dso9254a.hpp
devices/example/: CMakeLists.txt  example.cc  example.cpp  example.h  example.hpp  example_defaults.hpp
devices/timepix3/: CMakeLists.txt  timepix3.cc  timepix3.cpp  timepix3.h  timepix3.hpp  timepix3_defaults.hpp
doc/: CMakeLists.txt
doc/reference/: Doxyfile.in
doc/usermanual/: about.md  devices.md  exec.md  framework.md  index.md  manual.md  utils.md
etc/: CMakeLists.txt  analyzeThresholdscan.C  fitOnePixel.C  pearyd.conf  pearyd.service.in  plotmap.C  populateMatrix.py
etc/git-hooks/: pre-commit-clang-format-hook
etc/scripts/: make_device.sh
exec/: ATLASPixClientExample.py  ATLASPixServer.cpp  CMakeLists.txt  car_tests.cpp  clicommands.cpp  direct_device.cc  direct_device.cpp  dummyclient.cpp  dummysrv.cpp  pearycli.cpp  pearycli.hpp  pearyd.cpp  pearysrv.cpp  sample_application.cc  sample_application.cpp
exec/commandline/: Console.cpp  Console.hpp  clicommands.cpp  pearycli.cpp  pearycli.hpp
peary/: CMakeLists.txt
peary/carboard/: HAL.hpp  HAL.tcc  HALBase.cpp  carboard.hpp  hal.hcc  hal.hpp  hal.tcc
peary/device/: AuxiliaryDevice.hpp  AuxiliaryDevice.tcc  CaribouDevice.hcc  CaribouDevice.hpp  CaribouDevice.tcc  Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  auxiliarydevice.hcc  auxiliarydevice.hpp  auxiliarydevice.tcc  device.cc  device.cpp  device.h  device.hpp  devicemgr.cc  devicemgr.cpp  devicemgr.h  devicemgr.hpp  dynamic_device_impl.cpp  pearydevice.hcc  pearydevice.hpp  pearydevice.tcc
peary/hal/: hal.cc  hal.cpp  hal.h  hal.hcc  hal.hpp  hal.tcc  halbase.cpp  spi.h
peary/interfaces/: Interface.hpp  InterfaceManager.cpp  InterfaceManager.hpp  i2c.cc  i2c.cpp  i2c.h  i2c.hpp  interface.hpp  interface_manager.cpp  interface_manager.hpp  ipsocket.cpp  ipsocket.hpp  loopback.cpp  loopback.hpp  memory.cpp  memory.hpp  spi.cc  spi.cpp  spi.h  spi.hpp  spi_CLICpix2.cpp  spi_CLICpix2.hpp
peary/interfaces/I2C/: emulator.cpp  i2c.cpp  i2c.hpp
peary/interfaces/IPSocket/: ipsocket.cpp  ipsocket.hpp
peary/interfaces/Loopback/: loopback.cpp  loopback.hpp
peary/interfaces/Memory/: emulator.cpp  memory.cpp  memory.hpp
peary/interfaces/SPI/: emulator.cpp  spi.cpp  spi.hpp
peary/interfaces/SPI_CLICpix2/: emulator.cpp  spi_CLICpix2.cpp  spi_CLICpix2.hpp
peary/interfaces/emulators/: i2c.cpp  memory.cpp  spi.cpp  spi_CLICpix2.cpp
peary/utils/: carboard.hpp  configuration.cc  configuration.cpp  configuration.h  configuration.hpp  constants.h  constants.hpp  datatypes.hpp  dictionary.hpp  dispatcher.hpp  exceptions.h  exceptions.hpp  lfsr.cpp  lfsr.hpp  log.cpp  log.h  log.hpp  utils.cc  utils.cpp  utils.h  utils.hpp
python/: README.md  peary.py  setup.py
python/peary/: __init__.py  example.py  shell.py
