
SET(NAME "ATLASPix")

SET(SOURCEFILES
  ATLASPix.cpp ATLASPixMatrix.cpp ATLASPix_Config.cpp)

INCLUDE_DIRECTORIES(.)

ADD_DEFINITIONS(-DDEVICE_NAME="${NAME}")
ADD_LIBRARY(${NAME} SHARED ${SOURCEFILES})
TARGET_LINK_LIBRARIES(${NAME} ${PROJECT_NAME})

INSTALL(TARGETS ${NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
