PEARY_ENABLE_DEFAULT(OFF)

# Define device and return the generated name as DEVICE_NAME
PEARY_DEVICE(DEVICE_NAME)

INCLUDE_DIRECTORIES(SYSTEM ${LCIO_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES(${DEVICE_NAME} ${LCIO_LIBRARIES})

# Add source files to library
PEARY_DEVICE_SOURCES(${DEVICE_NAME}
	C3PD.cpp
)
