SET(NAME "Timepix3")

SET(SOURCEFILES
  timepix3.cpp)

INCLUDE_DIRECTORIES(.)

ADD_DEFINITIONS(-DDEVICE_NAME="${NAME}")
ADD_LIBRARY(${NAME} SHARED ${SOURCEFILES})
TARGET_LINK_LIBRARIES(${NAME} ${PROJECT_NAME})

INSTALL(TARGETS ${NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
